# metamix

./: .clang-format  .dockerignore  .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  Dockerfile  Justfile  LICENSE  README.md  docker-compose.yml
CMakeModules/: FindFFmpeg.cmake
src/: abstract_input.cpp  abstract_input.h  application_context.cpp  application_context.h  binary_emitter_util.h  binary_parser.h  binary_parser_util.h  byte_vector_io.h  clear_input.cpp  clear_input.h  clock.cpp  clock.h  clock_types.h  config.h.in  ffmpeg.cpp  ffmpeg.h  input_manager.h  iospec.h  log.cpp  log.h  main.cpp  metadata.h  metadata_kind.h  metadata_queue.h  optional_io.h  program_options.cpp  program_options.h  slice.h  supervisor.h  user_defined_input.cpp  user_defined_input.h  util.cpp  util.h  variant_io.h  version.cpp  version.h
src/h264/: av_packet_nalu.h  av_packet_nalu_parser.h  emitter.h  nalu.cpp  nalu.h  nalu_parser.cpp  nalu_parser.h  rbsp.h  sei_parser.cpp  sei_parser.h  sei_payload.cpp  sei_payload.h  stdseis.cpp  stdseis.h
src/io/: io_handle.cpp  io_handle.h  remux_loop.cpp  remux_loop.h  sink_handle.cpp  sink_handle.h  source_handle.cpp  source_handle.h  stream_classification.h
src/proc/: controller.cpp  controller.h  extractor.cpp  extractor.h  injector.cpp  injector.h
src/scte35/: crc32.cpp  crc32.h  emitter.h  parser.cpp  parser.h  scte35.cpp  scte35.h
test/: clock_test.cpp  main.cpp  metadata_queue_test.cpp  ts_ticker_test.cpp
test/h264/: nalu_test.cpp  rbsp_test.cpp
test/scte35/: parser_emitter_test.cpp
util/: fbremix  traceparser.py
